--- a/COHORT44-106/app.html
+++ b/COHORT44-106/app.html
@@ -15,37 +15,47 @@
         <section id="sectionB">Section B
             <form>
                 <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
+                    <i id="iImportant" class="fa-solid fa-mug-hot"></i>
+                </div>
+                <div class="mb-3">
+                    <label for="title" 
+                    id="title" class="form-label">Title</label>
                     <input type="text" class="form-control" id="title" aria-describedby="titleHelp">
                     <div id="titleHelp" class="form-text">Enter the title of the item.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="description" class="form-label">Description</label>
+                    <label for="description" id="description"           class="form-label">Description</label>
                     <textarea class="form-control" id="description" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <label for="color" class="form-label">Color</label>
+                    <label for="color" id="color" class="form-label">Color</label>
                     <input type="color" class="form-control" id="color">
                 </div>
                 <div class="mb-3">
-                    <label for="startDate" class="form-label">Start Date</label>
+                    <label for="startDate" id="startDate" class="form-label">Start Date</label>
                     <input type="date" class="form-control" id="startDate">
                 </div>
                 <div class="mb-3">
-                    <label for="status" class="form-label">Status</label>
+                    <label for="status" id="status" class="form-label">Status</label>
                     <select class="form-select" id="status">
                     <option value="active">Active</option>
                     <option value="inactive">Inactive</option>
                     </select>
                 </div>
+                <div class="mb-3">
+                    <label for="budget" id="budget" class="form-label">Budget</label>
+                    <input type="number" class="form-control" id="budget" step="0.01" required>
+                </div>
                 <!-- Existing form fields for email, password, and checkbox remain unchanged -->
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button id="btnSave" class="btn btn-primary">Submit</button>
             </form>
         </section>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="/scripts/task.js"></script>
+    <script src="/scripts/app.js"></script>
 </body>
 </html>
 <!--
